# ionic-passkeys

./: .env  .gitignore  capacitor.config.ts  ionic.config.json  package-lock.json  package.json  whizz.sh
.cargo/: config.toml
.next/: build-manifest.json  prerender-manifest.js  react-loadable-manifest.json  routes-manifest.json  trace
.next/cache/: .tsbuildinfo
.next/cache/webpack/client-production/: 1.pack  2.pack  3.pack  4.pack  index.pack  index.pack.old
.next/cache/webpack/edge-server-production/: index.pack
.next/cache/webpack/server-production/: 0.pack  1.pack  2.pack  3.pack  4.pack  5.pack  index.pack  index.pack.old
.next/server/: middleware-build-manifest.js  middleware-react-loadable-manifest.js  pages-manifest.json
.next/server/pages/: Page.js  Page.js.nft.json
.next/static/chunks/: 0fdcf2d9-155c9fab35d6e669.js  338.9e648076559f190f.js  576.8687a8abf0fbdb23.js  753.d70a5eb9436f7b6b.js  758.1eba29c3f5b10ab5.js  789.4c072addc228ec57.js  854-c2ae997198de3385.js  webpack-3f30ad999db42671.js
.next/static/chunks/pages/: Page-21bc957cc5ba0fae.js
.next/static/kDBxQ2PLIvqoBdH5I1Njn/: _buildManifest.js
android/: capacitor.settings.gradle
android/app/: build.gradle  capacitor.build.gradle
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/ionic/passkeys/: MainActivity.java
android/app/src/main/res/values/: strings.xml
ios/App/: Podfile
ios/App/App/: Info.plist
ios/App/App.xcodeproj/: project.pbxproj
rust/: Cargo.toml
rust/server/: .env  Cargo.toml  diesel.toml
rust/server/db/migrations/01_global/: down.sql  up.sql
rust/server/src/: auth.rs  main.rs  schema.rs
rust/server/src/apis/: config.rs  mod.rs  passkeys.rs  user.rs
rust/server/src/db/: credentials.rs  mod.rs  regstates.rs  users.rs
rust/server/src/engine/: mod.rs  passkeys.rs  startup.rs  users.rs
rust/shared/: Cargo.toml
rust/shared/src/: errors.rs  lib.rs  utils.rs
rust/shared/src/crypto/: auth.rs  crypto.rs  helpers.rs  jwt.rs  mod.rs  otp.rs
rust/shared/src/domain/: models.rs
rust/shared/src/json/: auth.rs  mod.rs  passkeys.rs  user.rs
rust/static/.well-known/: apple-app-site-association  assetlinks.json
src/components/: ExploreContainer.tsx
src/pages/: Page.tsx
