[package]
name = "server"
version = "0.1.0"
edition = "2021"
[features]
#default=["no_email"]
no_email=[]


[dependencies]
shared = { path = "../shared" }
rocket = {version="0.5.0", features = ["json"]}
rocket_sync_db_pools = {version = "0.1.0", features = ["diesel_postgres_pool"]}

diesel = {version = "2.1", features = ["postgres", "r2d2", "uuid", "numeric", "chrono", "serde_json"]}
diesel_migrations = "2.1"
diesel-enum = "0.1.0"

dotenv = "0.15.0"
r2d2-diesel = "1.0.0"
r2d2 = "0.8"
uuid = { version = "1.4", features = ["serde", "v4"] }
urlencoding = { version = "2.1.3" }
serde_json = "1.0"

chrono = "0.4"
lettre = "0.11"
native-tls = "0.2"

jwt-simple = "0.11"

openssl = "0.10"
openssl-sys = "0.9"

rand = "0.8.4"
base64 = "0.13.0"

log = "0.4"
env_logger = "0.9"
webauthn-rs = { version = "0.4", features = ["danger-allow-state-serialisation"] }
